--- a/04-interatividade.Rmd
+++ b/04-interatividade.Rmd
@@ -1,7 +1,9 @@
-# Applications
+# Interatividade
 
 Some _significant_ applications are demonstrated in this chapter.
 
-## Example one
+## Histórico
 
-## Example two
+## Shiny
+
+### Exemplos para GIS
