--- a/01-introducao.Rmd
+++ b/01-introducao.Rmd
@@ -53,11 +53,124 @@ file.copy('GIS-Data/Robinlovelace-Creating-maps-in-R-930376b/data/', to = 'GIS-D
   - rgeos
   - rgdal
   - maptools
+  - tmap
 
 ### Bibliotecas para Raster
 
+Ao se trabalhar com arquivos raster no R será utilizado principalmente duas bibliotecas 
+
  - raster
  - rasterVis
+
+O R armazena o arquivo raster de tres formas a saber:
+
+  - RasterLayer: menor porção de informação de um arquivo do tipo raster
+  - RasterStack: conjunto de layers (RasterLayer) que são armazenados e processados a partir dos arquivos originias (em disco)
+  - RasterBrick: conjunto de layers (RasterBrick) combinado para otimizar o trabalho em memória, todas as informações são armazenadas internamente no R.
+  
+Para iniciar os trabalhos com este tipo de arquivo e realizar algumas operações básicas, iremos trabalhar com dois arquivos raster sobre Evapotranspiração (2013 e 2014) gentilmente cedidos (?) para os trabalhos durante o curso.
+
+#### Evapotranspiração
+
+Para carregar os arquivos que estão na pasta 'dataClass' utilizados o seguinte código
+
+```{r rasterEvapo}
+listaArquivos <- list.files('dataClass/dados_curso_R_Evapot', pattern = '*.tif$', full.names = TRUE, include.dirs = TRUE)
+
+crsW84 = CRS("+proj=longlat +datum=WGS84 +ellps=WGS84 +towgs84=0,0,0")
+
+evapo13 = raster(listaArquivos[1], crs = crsW84)
+evapo14 = raster(listaArquivos[2], crs = crsW84)
+
+```
+
+Para saber mais sobre os códigos de projeções cartográficas acesse [http://spatialreference.org/](Spatial Reference).
+
+Podemos verificar o resumo do arquivo (sumário) com o comando
+
+```{r rasterEvapoSummary}
+evapo13
+```
+
+Podemos realizar algumas operações básicas como os dados das células (pixel) do arquivo raster, veja alguns exemplos
+
+```{r rasterBasicAlgebraic}
+m1314=mean(evapo13, evapo14)
+cellStats(evapo13, mean)
+cellStats(evapo14, cv)
+cellStats(evapo14, 'rms') # Root Mean Square
+cellStats(evapo13, 'skew') # Skewness
+# v <- sampleRegular(evapo13, size=ncell(evapo13)*.25, asRaster=TRUE) 
+# sampleRandom(r, size=10)
+freq(evapo13)
+crosstab(evapo, long = TRUE)
+zonal(evapo13, evapo14, 'mean') # character function is better for large files
+# In above example the mean was calculated for each code zone from evapo14
+## see too extract function
+# Example below look for data around a pixel
+# rook <- matrix(c(NA, 1, NA, 
+#                   1, 0,  1, 
+#                  NA, 1, NA), ncol=3, byrow=TRUE)
+# a0 = adjacent(evapo13, 1:ncell(evapo13), direction=rook, pairs = TRUE)
+# tb = table(evapo13[a0[,1]], evapo13[a0[,2]])
+# tb
+# tb = unclass(tb)
+# plot(raster(tb))
+```
+Também é possível fazer outras operação no raster, como por exemplo, recortar uma região de interesse com o método _drawExtend_ ou com o uso de um arquivo shapefile.
+
+```{r rasterCrop, eval=FALSE}
+plot(evapo13)
+e <- drawExtent()
+plot(evapo14)
+mean(values(crop(evapo14, drawExtent())))
+```
+
+Para agrupar Layers podemos usar as funções _merge_ e _mosaic_.
+
+```{r rasterMergeMosaic}
+meEvapo = merge(evapo13, evapo14)
+moEvapo = mosaic(evapo13, evapo14, fun=min)
+```
+
+Para calcular a autocorrelação espacial para uma layer raster, podemos usar __Geary__, __Moran__, __MoranLocal__, __GearyLocal__.
+
+```{r rasterSpatialCorrelation, eval=FALSE}
+Moran(evapo13)
+Moran(evapo14)
+```
+Também é possivel realizar outras operações com cálculos, a partir de funções definidas pelo usuário. Pode-se calcular o indice NVDI de um raster Landsat 7 pela combinação das bandas 4 e 3.
+
+$ NDVI=\frac{NIR-R}{NIR+R} $
+
+
+
+```{r rasterAdvancedCalc}
+# Define the function to calculate NDVI from 
+ndvCalc <- function(x) {
+    ndvi <- (x[[4]] - x[[3]]) / (x[[4]] + x[[3]])
+    return(ndvi)
+}
+# ndvi2 <- calc(x=gewata, fun=ndvCalc)
+ndvOver <- function(x, y) {
+    ndvi <- (y - x) / (x + y)
+    return(ndvi)
+}
+# ndvi3 <- overlay(x=gewata[[3]], y=gewata[[4]], fun=ndvOver)
+```
+
+Conforme o interesse é possível reprojetar o raster para outras projeções cartográficas.
+
+```{r rasterP, eval=FALSE}
+ndviLL <- projectRaster(evapo13, crs='+proj=longlat')
+```
+
+Também é possível utilizar modelos para fazer previsões em dados de raster. Para tanto, utilizamos a função _predict_. Se o modelo faz uso da posição (x e y) como variável é necessário utilizar a função _interpolate_.
+
+```{r rasterModel, eval=FALSE}
+
+```
+
 
 ### Shapefile
 
