--- a/packages.bib
+++ b/packages.bib
@@ -20,10 +20,52 @@
   note = {R package version 1.13},
   url = {https://CRAN.R-project.org/package=knitr},
 }
+@Manual{R-lattice,
+  title = {lattice: Trellis Graphics for R},
+  author = {Deepayan Sarkar},
+  year = {2015},
+  note = {R package version 0.20-33},
+  url = {https://CRAN.R-project.org/package=lattice},
+}
+@Manual{R-latticeExtra,
+  title = {latticeExtra: Extra Graphical Utilities Based on Lattice},
+  author = {Deepayan Sarkar and Felix Andrews},
+  year = {2016},
+  note = {R package version 0.6-28},
+  url = {https://CRAN.R-project.org/package=latticeExtra},
+}
+@Manual{R-raster,
+  title = {raster: Geographic Data Analysis and Modeling},
+  author = {Robert J. Hijmans},
+  year = {2016},
+  note = {R package version 2.5-8},
+  url = {https://CRAN.R-project.org/package=raster},
+}
+@Manual{R-rasterVis,
+  title = {rasterVis: Visualization Methods for Raster Data},
+  author = {Oscar {Perpinan Lamigueiro} and Robert Hijmans},
+  year = {2016},
+  note = {R package version 0.40},
+  url = {https://CRAN.R-project.org/package=rasterVis},
+}
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
+}
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman},
   year = {2016},
   note = {R package version 0.9.6.14},
   url = {http://rmarkdown.rstudio.com},
+}
+@Manual{R-sp,
+  title = {sp: Classes and Methods for Spatial Data},
+  author = {Edzer Pebesma and Roger Bivand},
+  year = {2016},
+  note = {R package version 1.2-3},
+  url = {https://CRAN.R-project.org/package=sp},
 }
