--- a/packages.bib
+++ b/packages.bib
@@ -13,6 +13,27 @@
   url = {https://github.com/rstudio/bookdown},
   year = {2016},
 }
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain Francois},
+  year = {2016},
+  note = {R package version 0.5.0},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+@Manual{R-ggmap,
+  title = {ggmap: Spatial Visualization with ggplot2},
+  author = {David Kahle and Hadley Wickham},
+  year = {2016},
+  note = {R package version 2.6.1},
+  url = {https://CRAN.R-project.org/package=ggmap},
+}
+@Manual{R-ggplot2,
+  title = {ggplot2: An Implementation of the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang},
+  year = {2016},
+  note = {R package version 2.1.0},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
@@ -33,6 +54,13 @@
   year = {2016},
   note = {R package version 0.6-28},
   url = {https://CRAN.R-project.org/package=latticeExtra},
+}
+@Manual{R-maptools,
+  title = {maptools: Tools for Reading and Handling Spatial Objects},
+  author = {Roger Bivand and Nicholas Lewin-Koh},
+  year = {2016},
+  note = {R package version 0.8-39},
+  url = {https://CRAN.R-project.org/package=maptools},
 }
 @Manual{R-raster,
   title = {raster: Geographic Data Analysis and Modeling},
@@ -55,6 +83,20 @@
   note = {R package version 1.1-2},
   url = {https://CRAN.R-project.org/package=RColorBrewer},
 }
+@Manual{R-rgdal,
+  title = {rgdal: Bindings for the Geospatial Data Abstraction Library},
+  author = {Roger Bivand and Tim Keitt and Barry Rowlingson},
+  year = {2016},
+  note = {R package version 1.1-10},
+  url = {https://CRAN.R-project.org/package=rgdal},
+}
+@Manual{R-rgeos,
+  title = {rgeos: Interface to Geometry Engine - Open Source (GEOS)},
+  author = {Roger Bivand and Colin Rundel},
+  year = {2016},
+  note = {R package version 0.3-19},
+  url = {https://CRAN.R-project.org/package=rgeos},
+}
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman},
@@ -68,4 +110,11 @@
   year = {2016},
   note = {R package version 1.2-3},
   url = {https://CRAN.R-project.org/package=sp},
+}
+@Manual{R-tidyr,
+  title = {tidyr: Easily Tidy Data with `spread()` and `gather()` Functions},
+  author = {Hadley Wickham},
+  year = {2016},
+  note = {R package version 0.5.1},
+  url = {https://CRAN.R-project.org/package=tidyr},
 }
