Udpdate and add new packages

--- a/01-introducao.Rmd
+++ b/01-introducao.Rmd
@@ -21,7 +21,7 @@
 
 O conjunto mínimo de pacotes para trabalhar com GIS (Geographical Information System) no R é exibido a seguir
 
-```{r, minimalPacks, eval=FALSE}
+```{r, minimalPacks, eval=TRUE}
 
 libs <- c("ggmap", "rgdal", "rgeos", 
           "maptools", "dplyr", "tidyr",
