Update Intro file

--- a/01-introducao.Rmd
+++ b/01-introducao.Rmd
@@ -35,14 +35,14 @@ Após instalar e carregar os pacotes que serão usados, é hora de realizar o do
 
 Os comandos para realizar o donwload e descompactar o arquivo no diretorio atual são executados dentro da sessão do R.
 
-```{r downloadFile, eval=FALSE}
+```{r downloadFile, eval=TRUE}
 download.file('https://github.com/Robinlovelace/Creating-maps-in-R/zipball/master/', 
               destfile = 'file.zip',
               mode = 'wb')
 ```
 
 
-```{r unZip, eval=FALSE}
+```{r unZip, eval=TRUE}
 unzip(zipfile = 'file.zip', exdir = 'GIS-Data')
 file.copy('GIS-Data/Robinlovelace-Creating-maps-in-R-930376b/data/', to = 'GIS-Data', recursive = TRUE)
 ```
