--- a/03-multivariada.Rmd
+++ b/03-multivariada.Rmd
@@ -9,24 +9,24 @@ We describe our methods in this chapter.
 
 ## Agrupamentos
 
-```{r clusterSample, eval=TRUE}
+```{r clusterSample, eval=TRUE, echo=TRUE}
 
 set.seed(201607)
-kmDados5 <- kmeans(dadosX, 5)
+kmDados5 <- kmeans(dadosX[, -1], 5)
 kmDados5
 
-kmDados4 <- kmeans(dadosX, 4)
+kmDados4 <- kmeans(dadosX[, -1], 4)
 kmDados4
 
-kmDados3 <- kmeans(dadosX, 3)
+kmDados3 <- kmeans(dadosX[, -1], 3)
 kmDados3
 
-dadosAnova <- data.frame(rio=rownames(dadosX), 
-                         dadosX)
+dadosAnova <- data.frame(rio=dadosX[,1], 
+                         dadosX[,-1])
 dadosAnova[['grp3']] = factor(kmDados3$cluster)
 dadosAnova[['grp4']] = factor(kmDados4$cluster)
 
-View(dadosAnova)
+# View(dadosAnova)
 
 summary(aov(pH~grp3, data = dadosAnova))
 summary(aov(pH~grp4, data = dadosAnova))
@@ -45,28 +45,36 @@ summary(aov(pH~grp4, data = dadosAnova))
 
 dim(dadosX)
 
-rownames(dadosX) = dadosX[,1]
-dadosX = dadosX[,-1]
+dadosX0 = dadosX[,-1]
+row.names(dadosX0) = dadosX[['rio']]
 # ACP
 
-pcaDados = princomp(cor(dadosX), cor = TRUE)
+pcaDados = princomp(cor(dadosX0), cor = TRUE)
 # View(cor(dadosX))
 
 summary(pcaDados)
 screeplot(pcaDados)
+```
+
+```{r acpOptions1, echo=TRUE}
 biplot(pcaDados)
 abline(h=0,v=0, lty = 2, col = 'red')
+```
+
+```{r acpOptions2, echo=TRUE}
 
 biplot(pcaDados, choices = c(1,3))
 abline(h=0,v=0, lty = 2, col = 'red')
+
+```
+
+```{r acpOptions3, echo=TRUE}
 
 biplot(pcaDados, choices = c(2,3))
 abline(h=0,v=0, lty = 2, col = 'red')
 
 as.matrix(pcaDados$loadings)
 pcaDados$scores
-
 ```
-
 
 ## Escalonamento Multidimensional
