--- a/packages.bib
+++ b/packages.bib
@@ -9,9 +9,9 @@
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books with R Markdown},
   author = {Yihui Xie},
+  note = {R package version 0.0.64},
+  url = {https://github.com/rstudio/bookdown},
   year = {2016},
-  note = {R package version 0.1},
-  url = {https://CRAN.R-project.org/package=bookdown},
 }
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
@@ -24,6 +24,6 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman},
   year = {2016},
-  note = {R package version 1.0},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  note = {R package version 0.9.6.14},
+  url = {http://rmarkdown.rstudio.com},
 }
